syntax = "proto3";

option go_package = "github.com/A-Guldborg/handin-03";

package proto;

service ChittyChat {
    rpc Join(BasePacket) returns (stream Content);
    rpc Message (stream Content) returns (Ack);
}

message BasePacket {
    int64 LamportTimeStamp = 1;
    string ClientName = 2;
}

message Content {
    BasePacket BasePacket = 1;
    string MessageBody = 2;
}

message Ack {
    // Message received
    int32 StatusCode = 1;
}